--- a/templates/showAllCategories.html
+++ b/templates/showAllCategories.html
@@ -1,37 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Item Catalog</title>
-</head>
-<body>
-<!-- TODO: handle no categories -->
-	{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			<ul>
-			{% for message in messages %}
-				<li>{{ message }}</li>
-			{% endfor %}
-			</ul>
-		{% endif %}
-	{% endwith %}
-	{% if 'username' not in login_session %}
-		<a href="/login">login</a>
-	{% else %}
-		<p>{{login_session['username']}}</p>
-		<a href="/gdisconnect">logout</a>
-	{% endif %}
-	<ul>
-		{% for category in categories %}
-			<li><a href="{{url_for('showItemsInCategory', category_name=category.name)}}">{{category.name}}</a></li>
-		{% endfor %}
-	</ul>
-	<ul>
-		{% for latestItem in latestItems %}
-			<li><a href="{{url_for('showItem', category_name=latestItem.category_name, item_name=latestItem.name)}}">{{latestItem.name}}</a> ({{latestItem.category.name}})</li>
-		{% endfor %}
-	</ul>
-	{% if 'username' in login_session %}
-		<a href="{{url_for('createItem')}}">Add Item</a>
-	{% endif %}
-</body>
-</html>
+{% extends "layout.html" %}
+{% block title %}Item Catalog{% endblock %}
+{% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-4 bg-white">
+				<h2>Categories</h2>
+				<ul class="custom-list">
+					{% for category in categories %}
+						<li><a href="{{url_for('showItemsInCategory', category_name=category.name)}}">{{category.name}}</a></li>
+					{% endfor %}
+				</ul>
+			</div>
+			<div class="col-xs-8 bg-white">
+				<h2>Latest Items</h2>
+				<ul class="custom-list">
+					{% for latestItem in latestItems %}
+						<li><a href="{{url_for('showItem', category_name=latestItem.category_name, item_name=latestItem.name)}}">{{latestItem.name}}</a> ({{latestItem.category.name}}) - {{latestItem.creator_email}}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				{% if 'username' in login_session %}
+					<a href="{{url_for('createItem')}}">Add Item</a>
+				{% endif %}
+			</div>
+		</div>
+	</div>
+
+{% endblock %}
