--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Item Catalog</title>
-</head>
-<body>
-	<h1>Delete Item</h1>
-	{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			<ul>
-			{% for message in messages %}
-				<li>{{ message }}</li>
-			{% endfor %}
-			</ul>
-		{% endif %}
-	{% endwith %}
-	<form action="{{url_for('deleteItem', category_name=category_name, item_name=item.name)}}" method="post">
-		<p>Are you sure you want to delete {{item.name}} from {{category_name}}?</p>
-		<input type="submit">
-	</form>
-	<a href="{{url_for('showAllCategories')}}">back to main page</a>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block title %}Item Catalog - Delete{% endblock %}
+{% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 bg-white">
+				<h2>Delete Item</h2>
+				<form action="{{url_for('deleteItem', category_name=category_name, item_name=item.name)}}" method="post">
+					<p>Are you sure you want to delete {{item.name}} from {{category_name}}?</p>
+					<input type="submit">
+				</form>
+			</div>
+		</div>
+	</div>
+{% endblock %}
