--- a/templates/unauthorized.html
+++ b/templates/unauthorized.html
@@ -1,11 +1,12 @@
+
 {% extends "layout.html" %}
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
 <div class="container">
 		<div class="row">
 			<div class="col-xs-12 bg-white">
-				<h2>Page Not Found</h2>
-				<p>What you were looking for is just not there.
+				<h2>Unauthorized</h2>
+				<p>You are not authorized to {{op}} this item. Please create your own items.
 				<p><a href="{{url_for('showAllCategories')}}">go to main page</a>
 			</div>
 		</div>
